--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="one two">Click Me!</button>
-    <button class="one three">No, Click Me!</button>
+    <button class="one">Click Me!</button>
+    <button class="two">No, Click Me!</button>
   </body>
 </html>
